Neuro Pro Changelog

****************************

Version 2.0.4 (05-31-12)
-Fix for icon posiitoning in Firefox.

Version 2.0.3 (05-15-12)
-Added option for responsive embeded videos (Youtube/Vimeo).
-Added Polish language files. 

Version 2.0.2 (05-08-12)
-Updated German, Hebrew, Dush and Portuguese language files. 
-Added Spanish, Persian, French, Croatian, Italian,  Romanian, Rushian, Swedish and Turkish language files. 
-Updated response.pot
-Fixed/added missing translation wrappers to post pagination function.

Version 2.0.1 (04-30-11)
-Updated PressTrends code. 
-Added Pinterest social icon. 
-CSS fix for fallback menu. 

Version 2.0 (04-17-11)
-Moved to CyberChimps Response Core Framework. 

Version 1.0.8 (7-18-11)
-Fixed logo blowout issue related to adding Google + icon.

Version 1.0.7 (7-13-11)
-Added Google + social icon.
-Fixed a WordPress 3.2 bug in update.php.

Version 1.0.6 (7-6-11)
-Adjusted theme option CSS to eliminate WordPress 3.2 footer styling conflict.
-Security fix in comments.php removing $_SERVER variable statement.
-Cleaned up options.php, removed unnecessary functions.
-Now enqueueing WordPress jQuery library instead of Google's for offline functionality. 

Version 1.0.5 (6-13-11)
-API added for push updates.
-jQuery noconflict patch to fix third-party plugin compatibility issues.

Version 1.0.4 (6-07-11)
-Fixed additional custom slide bug created by previous fix.
-Fixed bold font-weight in post container not fully displaying.

Version 1.0.3 (6-06-11)
-Fixed Custom Slide bug with "blog pages show at most" setting.

Version 1.0.2 (6-01-11)
-Minor bug fixes

Version 1.0.1 (5-31-11)
-Default background/color scheme changed to wood/black.
-Changed social icons, removed broken IE alpha transparency fix.
-General bug fixes.

Version 1.0 (5-20-11)
-Initial Release.