@@ -4,6 +4,9 @@ Neuro Pro Changelog
 
 Version 2.0.4 (05-31-12)
 -Fix for icon posiitoning in Firefox.
+-Added Hindi language files.
+-Fix for slider custom captions.
+-Fixed Custom Header Element.
 
 Version 2.0.3 (05-15-12)
 -Added option for responsive embeded videos (Youtube/Vimeo).
